1999-11-22  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_one_configure_file): Define `install_sh'
	configure variable when AM_INIT_AUTOMAKE seen.  Report from Jim
	Meyering.

	* automake.in (handle_single_transform_list): Generate explicit
	rule for subdir objects.  Fixes new addition to subobj.test.

	* automake.in (handle_lib_objects_cond): Allow LIBOBJS to be
	defined by AC_SUBST.  Fixes ltlibobjs.test.

	Fix for sourcesub.test:
	* automake.in (handle_single_transform_list): Added `var'
	argument.  If config sub found, give error.
	(handle_source_transform): Updated for new
	handle_source_transform.

	* py-compile: New file.
	* m4/Makefile.am (m4data_DATA): Added python.m4.
	* m4/python.m4: New file.
	* automake.texi (Uniform): Mention PYTHON.
	(Python): New node.
	* Makefile.am (amfiles): Added python.am, python-clean.am.
	(dist_script_DATA): Added py-compile.
	* python.am: New file.
	* python-clean.am: New file.
	* automake.in (seen_pythondir): New global.
	(generate_makefile): Call handle_python.
	(handle_python): New function.
	(scan_one_configure_file): Set seen_pythondir if AM_PATH_PYTHON
	seen.
	(am_install_var): Special-case PYTHON like JAVA.
	(scan_configure): Check for py-compile.
	(initialize_global_constants): Added py-compile to @common_files.

	* ltlib.am (install-@DIR@LTLIBRARIES): Added missing space.

1999-11-21  Tom Tromey  <tromey@cygnus.com>

	* automake.in (finish_languages): Only generate suffix rule when
	not doing dependency tracking.

	* m4/init.m4 (AM_INIT_AUTOMAKE): Use AM_MISSING_INSTALL_SH.
	* m4/missing.m4 (AM_MISSING_INSTALL_SH): New macro.

	* depend2.am: Use @SOURCE@, @OBJ@, @LTOBJ@, @OBJOBJ@, and @BASE@.
	Always use `-o'.

1999-11-19  Tom Tromey  <tromey@cygnus.com>

	* dist.am: Set `CDPATH=:' to avoid problems.  Merged from
	Alexandre's change on branch.

1999-10-02  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* Makefile.am (maintainer-check): Look for occurrences of ``cd'
	without `CDPATH'.