@@ -4490,7 +4490,6 @@ sub scan_one_configure_file
 	    $seen_prog_install = 1;
 	    ($package_version = $1) =~ s/$AM_PACKAGE_VERSION_PATTERN/$1/o;
 	    $package_version_line = $.;
-	    $configure_vars{'install_sh'} = $filename . ':' . $.;
 	}
 
 	# This is like AM_INIT_AUTOMAKE, but doesn't actually set the
