@@ -1,5 +1,11 @@
 1999-11-22  Tom Tromey  <tromey@cygnus.com>
 
+	* m4/missing.m4 (AM_MISSING_INSTALL_SH): Don't take argument.
+	* m4/init.m4 (AM_INIT_AUTOMAKE): Don't pass argument to
+	AM_MISSING_INSTALL_SH.
+	* automake.in (scan_one_configure_file): Reverted previous
+	change.
+
 	* automake.in (scan_one_configure_file): Define `install_sh'
 	configure variable when AM_INIT_AUTOMAKE seen.  Report from Jim
 	Meyering.
